# HADA_CODE

./: README.md
2D_LIDAR/CALIBRATION_CODE/general_lens/: lidarCamAlignment.py
2D_LIDAR/CALIBRATION_CODE/wide_angle_lens/: globVariable.py
2D_LIDAR/LASERSCANNING_CODE/: Function.h  Include.h  LaserInterface.c  LaserInterface.h  SharedMem.c  Struct.h  manage.c
2D_LIDAR/SIMULATION_CODE/PYTHON/: lidar.py
3D_LIDAR/CALIBRATION/: Calibration.md  VelodyneCameraCalib.m
3D_LIDAR/CALIBRATION/src_file/: calibration.py  camPoint.py  module.py  signDistance.py  variable.py
3D_LIDAR/INTERFACE/: COMMAND.txt  Velodyne_Interface.md
3D_LIDAR/INTERFACE/Basic_python/: argv.py  batchfile.py  csvwriting.py  fileacccess.py  fileremove.py  operatingsystem.py  pool.py  realtime.py  removefile.py  result.pcd
3D_LIDAR/INTERFACE/Velodyne-VLP-16-master/: PCDfile.py  module.py  velodyne.py  visualize_point_cloud.py
DEVELOPMENT/2D lidar raw data/: module.py  raw_data.py
DEVELOPMENT/2D_LidarCamFusion/: AlignmentTest.py  globVariable.py  serial_node.py
DEVELOPMENT/2D_LidarCamFusion/LIDAR/: LIDAR.sln
DEVELOPMENT/2D_LidarCamFusion/batchFiles/: allignmentTest.bat  allignmentYolo.bat
DEVELOPMENT/2D_Lidar_wide_lens_Fusion/: wide_angle_alignment.py
DEVELOPMENT/3D_LIDAR/: Data.docx  Velodyne_Interface.md
DEVELOPMENT/3D_LIDAR/matlab/: CALIBRATION.m  PCDplot.m  RANSAC.asv  RANSAC.m  VelodyneCameraCalib.m  calibrationSession.mat
DEVELOPMENT/3D_LidarCamFusion/: calibration.md
DEVELOPMENT/3D_LidarCamFusion/CInterface/: CInterface.sln  CInterface.vcxproj  CInterface.vcxproj.filters  main.cpp  velodyne_driver.cpp  velodyne_driver.hpp
DEVELOPMENT/3D_LidarCamFusion/Delivery_code/: calibration.py  delivery_test_main.py  serial_node.py  signDistance.py  variable.py
DEVELOPMENT/3D_LidarCamFusion/matlab Code/: calibration.m  visualization.m
DEVELOPMENT/lane detection/: IPM_mapping.py  IPM_point.py  module.py
DEVELOPMENT/morai simulation/library file/: Export_Azimuth.csv  gps.py  lidar_simulation.py  module.py
DEVELOPMENT/obstacle avoidance/: dynamic_obstacle_ver1.py  dynamic_obstacle_ver2.py  module.py  serial_node.py  static_obstacle.py
DEVELOPMENT/wide_angle_lens/: 0_calibration.py  1_distortion.py  module.py
DEVELOPMENT/wide_angle_lens/matlab code/: calibrationSession.mat  cameraParams.mat  wide_lens.m
LIDAR/LASERSCANNING_CODE/: Function.c  Initialize.c  ReadData.c  main.c
LIDAR/SIMULATION_CODE/PYTHON/: lidar_simulation.py
WHOLE_PROCESS/: .gitignore  CMakeLists.txt  jarrys_toybox.cpp  main_hse.cpp
WHOLE_PROCESS/HADAPlot/: CMakeLists.txt  HADA_plot.cpp  draw.cpp
WHOLE_PROCESS/IMU/: IMU.cpp  SerialHeader.h  consoleDesign.c  consoleDesign.h  fileIO.h  sol.cpp  sol.h
WHOLE_PROCESS/LeekiYa/: md
WHOLE_PROCESS/LeekiYa/ctGuidance_230726_with_ImpactAngle/: 2023-08-22_2350navigation_exp.csv  2023-08-24_2032navigation_exp.csv  2023-09-08_1728navigation_exp.csv  2023-09-30_1958navigation_exp.csv  ExportData.py  guidance.py  (+6 more)
WHOLE_PROCESS/RS232/: CMakeLists.txt  RS232.cpp
WHOLE_PROCESS/RS232/py/: RS232_py.pyd  RS232_python.cpp  RS232_python.hpp
WHOLE_PROCESS/camera/: CMakeLists.txt  camera.cpp
WHOLE_PROCESS/camera/etc/: bottom.txt  left.txt  right.txt
WHOLE_PROCESS/camera/py/: camera_python.cpp  camera_python.hpp
WHOLE_PROCESS/lidar3d/: CMakeLists.txt  projector.cpp  velodyne_driver.cpp
WHOLE_PROCESS/lidar3d/py/: lidar3d_python.cpp  lidar3d_python.hpp
WHOLE_PROCESS/yolo/: CMakeLists.txt  cuda_kernel.cu  engine.cpp  yolo_seg.cu  yolov8.cpp
(+568 files in other folders)
